# template-python-project

./: .gitignore  README.md  logging.yaml  pyproject.toml
docs/: example.md
src/arithmetic/: __init__.py
src/cli_tool/: __main__.py  cli.py
src/package/: __init__.py  __main__.py  cli.py  module.py
tests/arithmetic/: conftest.py  test_add.py  test_divide.py
tools/: tool.py
